[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "chardet>=7.4.3",
    "grandalf>=0.8",
    "isort>=8.0.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
